--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -27,12 +27,14 @@
   "apksToApk": "مجمع APKS",
   "appDescription": "مجموعة من أدوات الهندسة العكسية.",
   "appTitle": "Revengi",
+  "arguments": "Arguments",
   "availableIn": "متاح لدى",
   "batteryOptimization": "تحسين البطارية",
   "batteryOptimizationMessage": "بالنسبة إلى Android 11 وما فوق ، نحتاج إلى تعطيل تحسين البطارية لهذا التطبيق للعمل بشكل صحيح في الخلفية.",
   "blutter": "أداة بلاتر",
   "blutterDesc": "تحليل بنية كود تطبيقات الفلاتر",
   "blutterNote": "\nملف APK: سيتم معالجة الملفات داخل الملف مباشرة\n\nملف ZIP: يجب عليك التأكد بأن الملف يحوى ملف libapp.so بمعمارية 64 بت (arm64-v8a) \nإذا لم يوجد سيفسد التحليل وستضيع وقتنا عبثاً.",
+  "briefSummary": "نبذة مختصرة",
   "cancel": "إلغاء",
   "chat": "المحادثة",
   "checkForUpdate": "عرض التحديثات",
@@ -108,6 +110,7 @@
   "installer": "ثبت بواسطة",
   "jniAnalysis": "تحليل ملفات lib",
   "jniAnalysisDesc": "تحليل هيكل ملفات ال\".so\" داخل التطبيق",
+  "keyComponents": "Key components",
   "language": "لغة التطبيق : {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "المزيد",
   "mtHook": "قتل توقيع MT",
   "mtHookDesc": "حقن كود قتل التوقيع مثل MT",
+  "neverShowAgain": "لا تظهر مرة أخرى",
   "noAppsFound": "لم يتم العثور على تطبيقات",
   "noFileSelected": "لم يتم تحديد ملف",
   "notFound": "غير موجود",
@@ -169,6 +173,7 @@
   "profile": "حساب تعريفي",
   "rawData": "البيانات الخام",
   "register": "تسجيل",
+  "registerInformation": "Register information",
   "repair": "إصلاح",
   "repairDexError": "خطأ في إصلاح ملف DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "تعيين رسالة النظام",
   "signature": "التوقيع",
   "signInfo": "معلومات التوقيع",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "شرح كود السمالى",
   "status": "الحالة",
   "suggestLogin": "لديك حساب؟ تسجيل الدخول",
