--- a/lib/l10n/app_el.arb
+++ b/lib/l10n/app_el.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS στο APK",
   "appDescription": "Συλλογή εργαλείων αντίστροφης μηχανικής.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Διαθέσιμο σε",
   "batteryOptimization": "Βελτιστοποίηση Μπαταρίας",
   "batteryOptimizationMessage": "Για Android 11 και παραπάνω, Πρέπει να απενεργοποιήσετε τη βελτιστοποίηση της μπαταρίας για να λειτουργήσει σωστά αυτή η εφαρμογή στο παρασκήνιο.",
   "blutter": "Blutter",
   "blutterDesc": "Εργαλείο ανάλυσης δυαδικών πτερυγίων",
   "blutterNote": "\nAPK: Η εφαρμογή θα χειριστεί απευθείας τα αρχεία APK.\n\r\nZIP: Βεβαιωθείτε ότι τα αρχεία ZIP περιέχουν μόνο το `libapp. o` για την αρχιτεκτονική arm64. Η μη συμμόρφωση μπορεί να οδηγήσει σε σφάλματα.",
+  "briefSummary": "Brief Summary",
   "cancel": "Ακύρωση",
   "chat": "Συνομιλία",
   "checkForUpdate": "Έλεγχος για ενημερώσεις",
@@ -108,6 +110,7 @@
   "installer": "Εγκαταστάτης",
   "jniAnalysis": "Ανάλυση JNI",
   "jniAnalysisDesc": "Βρείτε JNI υπογραφές στο APK",
+  "keyComponents": "Key components",
   "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Περισσότερα",
   "mtHook": "MT Γάντζος",
   "mtHookDesc": "Δημιουργία MT Ενισχυμένη Αγκίστρια",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Δεν βρέθηκαν εφαρμογές",
   "noFileSelected": "Δεν επιλέχθηκε αρχείο",
   "notFound": "Δεν Βρέθηκε",
@@ -169,6 +173,7 @@
   "profile": "Προφίλ",
   "rawData": "Ανεπεξέργαστα δεδομένα",
   "register": "Εγγραφή",
+  "registerInformation": "Register information",
   "repair": "Επισκευή",
   "repairDexError": "Error repairing DEX file: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Ορισμός Μηνύματος Συστήματος",
   "signature": "Υπογραφή",
   "signInfo": "Πληροφορίες Υπογραφής",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Γραμματική Σμάλι",
   "status": "Κατάσταση",
   "suggestLogin": "Έχετε ένα λογαριασμό? Είσοδος",
