--- a/lib/l10n/app_fi.arb
+++ b/lib/l10n/app_fi.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS APK",
   "appDescription": "Kokoelma kääntöteknisiä työkaluja.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Saatavilla osoitteessa",
   "batteryOptimization": "Akun Optimointi",
   "batteryOptimizationMessage": "Android-laitteelle 13 ja sitä vanhemmalle Meidän on poistettava akun optimointi käytöstä, jotta tämä sovellus toimisi kunnolla taustalla.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binaarinen analyysityökalu",
   "blutterNote": "\nAPK: Sovellus käsittelee APK-tiedostoja suoraan.\n\r\nZIP: Varmista, että ZIP tiedostot sisältävät vain `libapp. o` arm64-arkkitehtuuriin. Epäonnistuminen voi johtaa virheisiin.",
+  "briefSummary": "Brief Summary",
   "cancel": "Peruuta",
   "chat": "Keskustelu",
   "checkForUpdate": "Tarkista päivitykset",
@@ -108,6 +110,7 @@
   "installer": "Asentaja",
   "jniAnalysis": "JNI- Analyysi",
   "jniAnalysisDesc": "Etsi JNI allekirjoituksia APK",
+  "keyComponents": "Key components",
   "language": "Kieli: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Lisää",
   "mtHook": "MT Koukku",
   "mtHookDesc": "Luo Mt Enhanced Koukut",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Sovelluksia ei löytynyt",
   "noFileSelected": "Ei valittua tiedostoa",
   "notFound": "Ei Löytynyt",
@@ -169,6 +173,7 @@
   "profile": "Profiili",
   "rawData": "Raaka-aineet",
   "register": "Rekisteröidy",
+  "registerInformation": "Register information",
   "repair": "Korjaa",
   "repairDexError": "Virhe korjattaessa DEX-tiedostoa: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Aseta Järjestelmäviesti",
   "signature": "Allekirjoitus",
   "signInfo": "Allekirjoituksen Tiedot",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Kielioppi",
   "status": "Tila",
   "suggestLogin": "Onko sinulla tili? Kirjaudu",
