--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS à APK",
   "appDescription": "Une collection d'outils d'ingénierie inversée.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Disponible dans",
   "batteryOptimization": "Optimisation de la batterie",
   "batteryOptimizationMessage": "Pour Android 11 et plus, nous devons désactiver l'optimisation de la batterie pour que cette application fonctionne correctement en arrière-plan.",
   "blutter": "Blutter",
   "blutterDesc": "Outil d'analyse binaire Flutter",
   "blutterNote": "\nAPK: L'application gérera directement les fichiers APK.\n\nZIP: Assurez-vous que les fichiers ZIP ne contiennent que la « libapp.so » pour l'architecture arm64. Sinon, des erreurs peuvent intervenir.",
+  "briefSummary": "Brief Summary",
   "cancel": "Abandonner",
   "chat": "Discuter",
   "checkForUpdate": "Vérifier les mises à jour",
@@ -108,6 +110,7 @@
   "installer": "Installateur",
   "jniAnalysis": "Analyse JNI",
   "jniAnalysisDesc": "Trouver les signatures JNI dans l'APK",
+  "keyComponents": "Key components",
   "language": "Langue : {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "En savoir plus",
   "mtHook": "Crochet MT",
   "mtHookDesc": "Générer des crochets MT avancée",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Aucune application trouvée",
   "noFileSelected": "Aucun fichier sélectionné",
   "notFound": "Non Trouvé",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Données brutes",
   "register": "Inscription",
+  "registerInformation": "Register information",
   "repair": "Réparer",
   "repairDexError": "Erreur lors de la réparation du fichier DEX : {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Définir le message système",
   "signature": "Signature",
   "signInfo": "Informations sur la signature",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Grammaire Smali",
   "status": "Statut",
   "suggestLogin": "Vous avez un compte ? Connectez-vous",
