--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS a APK",
   "appDescription": "Una collezione di strumenti di reverse engineering.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Disponibile in",
   "batteryOptimization": "Ottimizzazione Batteria",
   "batteryOptimizationMessage": "Per Android 11 e versioni successive, dobbiamo disabilitare l'ottimizzazione della batteria per consentire a questa app di funzionare correttamente in background.",
   "blutter": "Blutter",
   "blutterDesc": "Strumento di analisi binaria del flutter",
   "blutterNote": "\nAPK: L'applicazione gestirà direttamente i file APK.\n\r\nZIP: Assicurati che i file ZIP contengano solo la `libapp. o` per l'architettura dell'arm64. Il mancato rispetto può causare errori.",
+  "briefSummary": "Brief Summary",
   "cancel": "Annulla",
   "chat": "Chat",
   "checkForUpdate": "Controlla aggiornamenti",
@@ -108,6 +110,7 @@
   "installer": "Installatore",
   "jniAnalysis": "Analisi JNI",
   "jniAnalysisDesc": "Trova firme JNI nell'APK",
+  "keyComponents": "Key components",
   "language": "Lingua: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Altro",
   "mtHook": "MT Hook",
   "mtHookDesc": "Genera MT Enhanced Hooks",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Nessuna app trovata",
   "noFileSelected": "Nessun file selezionato",
   "notFound": "Non Trovato",
@@ -169,6 +173,7 @@
   "profile": "Profilo",
   "rawData": "Dati grezzi",
   "register": "Registrati",
+  "registerInformation": "Register information",
   "repair": "Riparazione",
   "repairDexError": "Errore nella riparazione del file DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Imposta Messaggio Di Sistema",
   "signature": "Firma",
   "signInfo": "Informazioni Sulla Firma",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Grammatica Smali",
   "status": "Stato",
   "suggestLogin": "Hai un account? Accedi",
