--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS naar APK",
   "appDescription": "Een verzameling omgekeerde engineering gereedschappen.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Beschikbaar in",
   "batteryOptimization": "Batterij optimalisatie",
   "batteryOptimizationMessage": "Voor Android 11 en hoger, moeten we batterij optimalisatie uitschakelen om deze app goed te laten werken op de achtergrond.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binaire analyse tool",
   "blutterNote": "\nAPK: De app zal APK bestanden direct afhandelen.\n\r\nZIP: zorg ervoor dat ZIP bestanden alleen de `libapp bevatten. O` for arm64 architectuur. Als je dit niet doet, kan dit fouten veroorzaken.",
+  "briefSummary": "Brief Summary",
   "cancel": "annuleren",
   "chat": "Chatten",
   "checkForUpdate": "Controleren op updates",
@@ -108,6 +110,7 @@
   "installer": "Installatie",
   "jniAnalysis": "JNI analyse",
   "jniAnalysisDesc": "Zoek JNI handtekeningen in APK",
+  "keyComponents": "Key components",
   "language": "Taal: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Meer",
   "mtHook": "MT Haak",
   "mtHookDesc": "Genereer MT versterkte hooks",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Geen apps gevonden",
   "noFileSelected": "Geen bestand geselecteerd",
   "notFound": "Niet gevonden",
@@ -169,6 +173,7 @@
   "profile": "Profiel",
   "rawData": "Onbewerkte gegevens",
   "register": "Registreren",
+  "registerInformation": "Register information",
   "repair": "Herstellen",
   "repairDexError": "Fout bij het repareren van DEX-bestand: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Systeembericht instellen",
   "signature": "Handtekening",
   "signInfo": "Handtekening informatie",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammatica",
   "status": "status",
   "suggestLogin": "Heb je een account? Log in",
