--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS para APK",
   "appDescription": "Uma coleção de ferramentas de engenharia reversa.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Disponível em",
   "batteryOptimization": "Otimização de bateria",
   "batteryOptimizationMessage": "Para o Android 11 e superior, precisamos desativar a otimização de bateria para que esse aplicativo funcione corretamente em segundo plano.",
   "blutter": "Blutter",
   "blutterDesc": "Ferramenta de análise binária flamejante",
   "blutterNote": "\nAPK: O aplicativo irá lidar diretamente com arquivos APK.\n\r\nZIP: Certifique-se de que arquivos ZIP contenham apenas o `libapp. o` para arquitetura arm64. Não cumprir pode resultar em erros.",
+  "briefSummary": "Brief Summary",
   "cancel": "cancelar",
   "chat": "Bate-papo",
   "checkForUpdate": "Procurar por atualizações",
@@ -108,6 +110,7 @@
   "installer": "Instalador",
   "jniAnalysis": "Análise JNI",
   "jniAnalysisDesc": "Encontre assinaturas do JNI no APK",
+  "keyComponents": "Key components",
   "language": "Idioma: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "MAIS",
   "mtHook": "MT Hook",
   "mtHookDesc": "Gerar MT Hooks Aprimorados",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Nenhum aplicativo encontrado",
   "noFileSelected": "Nenhum arquivo selecionado",
   "notFound": "Não Encontrado",
@@ -169,6 +173,7 @@
   "profile": "Perfil",
   "rawData": "Dados raw",
   "register": "Cadastrar",
+  "registerInformation": "Register information",
   "repair": "Reparação",
   "repairDexError": "Erro ao reparar arquivo DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Definir Mensagem do Sistema",
   "signature": "Assinatura",
   "signInfo": "Informação de Assinatura",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Gramática Smali",
   "status": "SItuação",
   "suggestLogin": "Tem uma conta? Entrar",
