--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS в АПК",
   "appDescription": "Сбор обратных инженерных инструментов.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Доступно в",
   "batteryOptimization": "Оптимизация батареи",
   "batteryOptimizationMessage": "Для Android 11 и выше нам нужно отключить оптимизацию батареи, чтобы это приложение работало правильно в фоновом режиме.",
   "blutter": "Blutter",
   "blutterDesc": "Инструмент бинарного анализа Flutter",
   "blutterNote": "\nAPK: Приложение будет работать непосредственно с APK файлами.\n\r\nZIP: Убедитесь, что ZIP файлы содержат только `libapp. o` для архитектуры arm64. Несоответствие может привести к ошибкам.",
+  "briefSummary": "Brief Summary",
   "cancel": "Отмена",
   "chat": "Чат",
   "checkForUpdate": "Проверить обновления",
@@ -108,6 +110,7 @@
   "installer": "Установщик",
   "jniAnalysis": "JNI Анализ",
   "jniAnalysisDesc": "Поиск JNI подписей в APK",
+  "keyComponents": "Key components",
   "language": "Язык: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Ещё",
   "mtHook": "MT Hook",
   "mtHookDesc": "Генерировать улучшенные хуки MT",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Не найдено приложений",
   "noFileSelected": "Файл не выбран",
   "notFound": "Не найдено",
@@ -169,6 +173,7 @@
   "profile": "Профиль",
   "rawData": "Сырье данных",
   "register": "Регистрация",
+  "registerInformation": "Register information",
   "repair": "Ремонт",
   "repairDexError": "Ошибка восстановления файла DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Задать системное сообщение",
   "signature": "Подпись",
   "signInfo": "Информация о подписи",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammar",
   "status": "Статус",
   "suggestLogin": "Уже есть аккаунт? Войдите",
