--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS till APK",
   "appDescription": "En samling av verktyg för omvänd konstruktion.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Tillgänglig i",
   "batteryOptimization": "Batterioptimering",
   "batteryOptimizationMessage": "För Android 11 och ovan, Vi måste inaktivera batterioptimering för att denna app ska fungera korrekt i bakgrunden.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binära analysverktyg",
   "blutterNote": "\nAPK: Appen kommer direkt att hantera APK-filer.\n\r\nZIP: Se till att ZIP-filer endast innehåller `libappen. o` för arm64-arkitektur. Underlåtenhet att följa kan resultera i fel.",
+  "briefSummary": "Brief Summary",
   "cancel": "Avbryt",
   "chat": "Chatt",
   "checkForUpdate": "Sök efter uppdateringar",
@@ -108,6 +110,7 @@
   "installer": "Installatör",
   "jniAnalysis": "JNI Analys",
   "jniAnalysisDesc": "Hitta JNI-signaturer i APK",
+  "keyComponents": "Key components",
   "language": "Språk: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Mer",
   "mtHook": "MT krok",
   "mtHookDesc": "Generera MT-förbättrade krokar",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Inga appar hittades",
   "noFileSelected": "Ingen fil vald",
   "notFound": "Hittades inte",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Rådata",
   "register": "Registrera",
+  "registerInformation": "Register information",
   "repair": "Reparera",
   "repairDexError": "Fel vid reparation av DEX-filen: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Ställ in systemmeddelande",
   "signature": "Signatur",
   "signInfo": "Information om signatur",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammatik",
   "status": "Status",
   "suggestLogin": "Har du ett konto? Logga in",
