--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS'i APK'ya dönüştürme",
   "appDescription": "Tersine mühendislik araçlar koleksiyonu",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Available in",
   "batteryOptimization": "Batarya Optimizasyonu",
   "batteryOptimizationMessage": "Android 11 ve üzeri sürümlerde, bu uygulamanın arka planda düzgün çalışması için pil optimizasyonunu devre dışı bırakmanız gerekiyor.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter ikili analiz aracı",
   "blutterNote": "\nAPK: APK dosyalarını doğrudan işleyecektir.\n\r\nZIP: dosyalarının yalnızca arm64 mimarisi için `libapp.so` dosyasını içerdiğinden emin olun. Buna uyulmaması hatalara neden olabilir.",
+  "briefSummary": "Brief Summary",
   "cancel": "Kapat",
   "chat": "Sohbet",
   "checkForUpdate": "Güncellemeleri kontrol et",
@@ -108,6 +110,7 @@
   "installer": "Installer",
   "jniAnalysis": "JNI Analizi",
   "jniAnalysisDesc": "APK'da JNI imzalarını bul",
+  "keyComponents": "Key components",
   "language": "Dil: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "More",
   "mtHook": "MT Kancası",
   "mtHookDesc": "Güçlendirilmiş MT Kancaları oluştur",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "No apps found",
   "noFileSelected": "Seçili dosya yok",
   "notFound": "Not Found",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Raw data",
   "register": "Kayıt ol",
+  "registerInformation": "Register information",
   "repair": "Düzelt",
   "repairDexError": "DEX dosyaları düzeltilirken hata oluştu: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Sistem Mesajı Ayarla",
   "signature": "Signature",
   "signInfo": "Signature Information",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali DilBilgisi",
   "status": "Status",
   "suggestLogin": "Hesabın mı var? Giriş yap",
