--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS до APK",
   "appDescription": "Колекція альтернативних інструментів.",
   "appTitle": "Ревенґі",
+  "arguments": "Arguments",
   "availableIn": "Доступно за",
   "batteryOptimization": "Оптимізація батареї",
   "batteryOptimizationMessage": "Для Android 11 і вище необхідно вимкнути оптимізацію заряду акумулятора для коректної роботи у фоновому режимі.",
   "blutter": "Blutter",
   "blutterDesc": "Програма неточного бінарного аналізу",
   "blutterNote": "\nAPK: Додаток буде безпосередньо обробляти APK файли.\n\r\nZIP: Переконайтеся в ZIP-файлах містить тільки `libapp. o` для архітектури 64. Невдача може спричинити помилки.",
+  "briefSummary": "Brief Summary",
   "cancel": "Скасувати",
   "chat": "Чат",
   "checkForUpdate": "Перевірити наявність оновлень",
@@ -108,6 +110,7 @@
   "installer": "Встановлювач",
   "jniAnalysis": "Аналіз JNI",
   "jniAnalysisDesc": "Знайти JNI підписи в APK",
+  "keyComponents": "Key components",
   "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Більше",
   "mtHook": "МТ Хук",
   "mtHookDesc": "Створити MT посилені хуки",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Додатки не знайдені",
   "noFileSelected": "Файл не вибрано",
   "notFound": "Не знайдено",
@@ -169,6 +173,7 @@
   "profile": "Анкета",
   "rawData": "Необроблені дані",
   "register": "Зареєструватися",
+  "registerInformation": "Register information",
   "repair": "Відновити",
   "repairDexError": "Помилка при ремонті файлу DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Установити системне повідомлення",
   "signature": "Підпис",
   "signInfo": "Відомості про підпис",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Смалі Граматика",
   "status": "Статус",
   "suggestLogin": "Вже маєте обліковий запис? Увійдіть",
