--- a/lib/l10n/app_ca.arb
+++ b/lib/l10n/app_ca.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS to APK",
   "appDescription": "A collection of reverse engineering tools.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Available in",
   "batteryOptimization": "Battery Optimization",
   "batteryOptimizationMessage": "For Android 11 and above, We need to disable battery optimization for this app to work properly in the background.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binary analysis tool",
   "blutterNote": "\nAPK: The app will directly handle APK files.\n\r\nZIP: Ensure ZIP files contain only the `libapp.so` for arm64 architecture. Failure to comply may result in errors.",
+  "briefSummary": "Brief Summary",
   "cancel": "Cancel",
   "chat": "Chat",
   "checkForUpdate": "Check for Updates",
@@ -108,6 +110,7 @@
   "installer": "Installer",
   "jniAnalysis": "JNI Analysis",
   "jniAnalysisDesc": "Find JNI signatures in APK",
+  "keyComponents": "Key components",
   "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generate MT Enhanced Hooks",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "No apps found",
   "noFileSelected": "No file selected",
   "notFound": "Not Found",
@@ -169,6 +173,7 @@
   "profile": "Profile",
   "rawData": "Raw data",
   "register": "Register",
+  "registerInformation": "Register information",
   "repair": "Repair",
   "repairDexError": "Error repairing DEX file: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Set System Message",
   "signature": "Signature",
   "signInfo": "Signature Information",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammar",
   "status": "Status",
   "suggestLogin": "Have an account? Login",
