--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS zu APK",
   "appDescription": "Eine Sammlung von Reverse Engineering Tools.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Verfügbar in",
   "batteryOptimization": "Akku-Optimierung",
   "batteryOptimizationMessage": "Für Android 11 und höher müssen wir die Batterieoptimierung deaktivieren, damit diese App im Hintergrund korrekt funktioniert.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter Binäranalyse-Tool",
   "blutterNote": "\nAPK: Die App verarbeitet direkt APK-Dateien.\n\r\nZIP: Stellen Sie sicher, dass ZIP-Dateien nur die `libapp' enthalten. o` für die arm64-Architektur. Bei Nichteinhaltung kann es zu Fehlern kommen.",
+  "briefSummary": "Brief Summary",
   "cancel": "Abbrechen",
   "chat": "Chat",
   "checkForUpdate": "Nach Updates suchen",
@@ -108,6 +110,7 @@
   "installer": "Installer",
   "jniAnalysis": "JNI Analyse",
   "jniAnalysisDesc": "JNI-Signaturen in APK finden",
+  "keyComponents": "Key components",
   "language": "Sprache: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Mehr",
   "mtHook": "MT-Haken",
   "mtHookDesc": "MT Verbesserte Hooks generieren",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Keine Apps gefunden",
   "noFileSelected": "Keine Datei ausgewählt",
   "notFound": "Nicht gefunden",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Rohdaten",
   "register": "Registrieren",
+  "registerInformation": "Register information",
   "repair": "Reparieren",
   "repairDexError": "Fehler beim Reparieren der DEX-Datei: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Systemnachricht festlegen",
   "signature": "Signatur",
   "signInfo": "Signaturinformationen",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammatik",
   "status": "Status",
   "suggestLogin": "Haben Sie ein Konto? Anmelden",
