--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS to APK",
   "appDescription": "Una colección de herramientas de ingeniería inversa.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Disponible en",
   "batteryOptimization": "Optimización de la batería",
   "batteryOptimizationMessage": "Para Android 11 y versiones posteriores, necesitamos deshabilitar la optimización de batería para que esta aplicación funcione correctamente en segundo plano.",
   "blutter": "Blutter",
   "blutterDesc": "Herramienta de análisis binario de Flutter",
   "blutterNote": "\nAPK: La aplicación manejará directamente los archivos APK.\n\nZIP: Asegúrese de que los archivos ZIP contengan únicamente el archivo `libapp.so` para la arquitectura arm64. El incumplimiento puede resultar en errores.",
+  "briefSummary": "Brief Summary",
   "cancel": "Cancelar",
   "chat": "Chat",
   "checkForUpdate": "Buscar actualizaciones",
@@ -108,6 +110,7 @@
   "installer": "Instalador",
   "jniAnalysis": "Análisis de JNI",
   "jniAnalysisDesc": "Buscar firmas JNI en APK",
+  "keyComponents": "Key components",
   "language": "Idioma: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Más",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generar MT Enhanced Hooks",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "No hay aplicaciones",
   "noFileSelected": "Ningún archivo seleccionado",
   "notFound": "No encontrado",
@@ -169,6 +173,7 @@
   "profile": "Perfil",
   "rawData": "Datos sin procesar",
   "register": "Registrarse",
+  "registerInformation": "Register information",
   "repair": "Reparar",
   "repairDexError": "Error al reparar archivo DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Establecer mensaje del sistema",
   "signature": "Firma",
   "signInfo": "Información de firma",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Gramática Smali",
   "status": "Estado",
   "suggestLogin": "¿Ya tienes cuenta? Iniciar sesión",
