--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS to APK",
   "appDescription": "リバースエンジニアリングツールのコレクション。",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "利用可能な言語",
   "batteryOptimization": "バッテリー最適化",
   "batteryOptimizationMessage": "Android 11 以降では、バックグラウンドで正常に動作するよう、このアプリのバッテリー最適化を無効にする必要があります。",
   "blutter": "Blutter",
   "blutterDesc": "Flutter バイナリ解析ツール",
   "blutterNote": "\nAPK: アプリは直接APKファイルを処理します。\n\r\nZIP: ZIPファイルに`libappのみが含まれていることを確認します。 arm64 アーキテクチャ向けの o` 。適合しないとエラーが発生する可能性があります。",
+  "briefSummary": "Brief Summary",
   "cancel": "キャンセル",
   "chat": "チャット",
   "checkForUpdate": "アップデートの確認",
@@ -108,6 +110,7 @@
   "installer": "インストーラー",
   "jniAnalysis": "JNI分析",
   "jniAnalysisDesc": "APKでJNI署名を検索",
+  "keyComponents": "Key components",
   "language": "言語: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "もっと見る",
   "mtHook": "MTフック",
   "mtHookDesc": "MT拡張フックを生成",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "アプリが見つかりません",
   "noFileSelected": "ファイルが選択されていません",
   "notFound": "見つかりませんでした",
@@ -169,6 +173,7 @@
   "profile": "プロフィール",
   "rawData": "生データ",
   "register": "登録",
+  "registerInformation": "Register information",
   "repair": "修復",
   "repairDexError": "DEXファイルの修復エラー: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "システムメッセージを設定",
   "signature": "署名",
   "signInfo": "署名情報",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammar",
   "status": "ステータス",
   "suggestLogin": "アカウントをお持ちですか？ログイン",
