--- a/lib/l10n/app_no.arb
+++ b/lib/l10n/app_no.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS til APK",
   "appDescription": "En samling av omvendt ingeniørverktøy.",
   "appTitle": "RevEngi",
+  "arguments": "Arguments",
   "availableIn": "Tilgjengelig i",
   "batteryOptimization": "Batterioptimalisering",
   "batteryOptimizationMessage": "Vi må deaktivere batterioptimalisering for Android 11 og eldre for at denne appen skal fungere ordentlig i bakgrunnen.",
   "blutter": "Blutter",
   "blutterDesc": "Verktøy for binær analyse",
   "blutterNote": "\nAPK: Appen vil håndtere APK filer direkte.\n\r\nZIP: Forsikre deg om at ZIP filer bare inneholder `libapp. o` for Anarm64-arkitektur. Manglende overholdelse kan føre til feil.",
+  "briefSummary": "Brief Summary",
   "cancel": "Avbryt",
   "chat": "Samtale",
   "checkForUpdate": "Se etter oppdateringer",
@@ -108,6 +110,7 @@
   "installer": "Installasjon",
   "jniAnalysis": "JNI Analyse",
   "jniAnalysisDesc": "Finn JNI signaturer i APK",
+  "keyComponents": "Key components",
   "language": "Språk: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Mer",
   "mtHook": "MT Lastkrok",
   "mtHookDesc": "Generer MT Enhanced Hooks",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Ingen apper funnet",
   "noFileSelected": "Ingen fil valgt",
   "notFound": "Ikke funnet",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Rå data",
   "register": "Registrer",
+  "registerInformation": "Register information",
   "repair": "Reparer",
   "repairDexError": "Feil under reparering av DEX-fil: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Sett systemmelding",
   "signature": "Signatur",
   "signInfo": "Signatur informasjon",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali grammatikk",
   "status": "Status:",
   "suggestLogin": "Har du en konto? Logg inn",
