--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS do APK",
   "appDescription": "Zbiór narzędzi inżynierii odwrotnej.",
   "appTitle": "Odwołanie Engi",
+  "arguments": "Arguments",
   "availableIn": "Dostępne w",
   "batteryOptimization": "Optymalizacja baterii",
   "batteryOptimizationMessage": "W przypadku Android 11 i powyżej musimy wyłączyć optymalizację baterii, aby aplikacja działała poprawnie w tle.",
   "blutter": "Blutter",
   "blutterDesc": "Narzędzie analizy binarnej Flutter",
   "blutterNote": "\nAPK: Aplikacja będzie bezpośrednio obsługiwać pliki APK.\n\r\nZIP: Upewnij się, że pliki ZIP zawierają tylko `libapp. o` dla architektury arm64. Niespełnienie wymagań może spowodować błędy.",
+  "briefSummary": "Brief Summary",
   "cancel": "Anuluj",
   "chat": "Czat",
   "checkForUpdate": "Sprawdź aktualizacje",
@@ -108,6 +110,7 @@
   "installer": "Instalator",
   "jniAnalysis": "Analiza JNI",
   "jniAnalysisDesc": "Znajdź podpisy JNI w APK",
+  "keyComponents": "Key components",
   "language": "Język: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Więcej",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generuj zaawansowane hooki MT",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Nie znaleziono aplikacji",
   "noFileSelected": "Nie wybrano pliku",
   "notFound": "Nie znaleziono",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Surowe dane",
   "register": "Rejestracja",
+  "registerInformation": "Register information",
   "repair": "Naprawa",
   "repairDexError": "Błąd podczas naprawy pliku DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Ustaw wiadomość systemową",
   "signature": "Podpis",
   "signInfo": "Informacje o podpisze",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammar",
   "status": "Status",
   "suggestLogin": "Masz konto? Zaloguj się",
