--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -27,12 +27,14 @@
   "apksToApk": "APKS pentru APK",
   "appDescription": "O colecție de instrumente de inginerie inversată.",
   "appTitle": "Revendică",
+  "arguments": "Arguments",
   "availableIn": "Disponibil în",
   "batteryOptimization": "Optimizare baterie",
   "batteryOptimizationMessage": "Pentru Android 11 și mai mare, trebuie să dezactivăm optimizarea bateriei pentru ca această aplicație să funcționeze corespunzător în fundal.",
   "blutter": "Blutter",
   "blutterDesc": "Instrument de analiză binară Flutter",
   "blutterNote": "\nAPK: Aplicația se va ocupa direct de fișiere APK.\n\r\nZIP: Asigurați-vă că fișierele ZIP conțin doar `libapp. o` pentru arhitectura arm64. Nerespectarea conformităţii poate duce la erori.",
+  "briefSummary": "Brief Summary",
   "cancel": "Anulează",
   "chat": "Chat",
   "checkForUpdate": "Verifică pentru actualizări",
@@ -108,6 +110,7 @@
   "installer": "Instalare",
   "jniAnalysis": "Analiza JNI",
   "jniAnalysisDesc": "Găsește semnăturile JNI în APK",
+  "keyComponents": "Key components",
   "language": "Limbă: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -140,6 +143,7 @@
   "more": "Mai",
   "mtHook": "Cârlig MT",
   "mtHookDesc": "Genereaza Cârlige Imbunatite MT",
+  "neverShowAgain": "Never show again",
   "noAppsFound": "Nicio aplicație găsită",
   "noFileSelected": "Niciun fișier selectat",
   "notFound": "Nu s-a găsit",
@@ -169,6 +173,7 @@
   "profile": "Profil",
   "rawData": "Date brute",
   "register": "Inregistrare",
+  "registerInformation": "Register information",
   "repair": "Repară",
   "repairDexError": "Eroare reparare fișier DEX: {e}",
   "@repairDexError": {
@@ -214,6 +219,7 @@
   "setSystemMessage": "Setare mesaj de sistem",
   "signature": "Semnătura",
   "signInfo": "Informații semnătură",
+  "smaligInfo2": "This view contains the grammar for the Smali language (Dalvik Bytecode Opcodes).",
   "smaliGrammar": "Smali Grammar",
   "status": "Status",
   "suggestLogin": "Ai un cont? Autentifică-te",
