--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -28,7 +28,7 @@
   "appDescription": "Uma coleção de ferramentas de engenharia reversa.",
   "appTitle": "RevEngi",
   "arguments": "Parâmetros",
-  "autoRefresh": "Auto refresh",
+  "autoRefresh": "Atualização automática",
   "availableIn": "Disponível em",
   "batteryOptimization": "Otimização de bateria",
   "batteryOptimizationMessage": "Para o Android 11 e superior, precisamos desativar a otimização de bateria para que esse aplicativo funcione corretamente em segundo plano.",
@@ -76,7 +76,7 @@
   "expireDate": "Expirado",
   "extractApk": "Extrair APK",
   "extractingApk": "Extraindo o APK",
-  "extractMultiApkConfirm": "Do you want to extract the {len} apk files you selected?",
+  "extractMultiApkConfirm": "Você quer extrair os arquivos apk {len} que você selecionou?",
   "@extractMultiApkConfirm": {
     "placeholders": {
       "len": {
@@ -103,7 +103,7 @@
   "featureNeedsApp": "Por favor, use o aplicativo desktop ou móvel para este recurso.",
   "fetchingModelInfo": "Buscando informações do modelo...",
   "fileExists": "O arquivo existe",
-  "fileExistsMsg": "File {outputfilePath} already exists. Do you want to overwrite it?",
+  "fileExistsMsg": "O arquivo {outputfilePath} já existe. Deseja substituí-lo?",
   "@fileExistsMsg": {
     "placeholders": {
       "outputfilePath": {
@@ -122,7 +122,7 @@
   "iDonTLoveThisApp": "Não me importo, arrepender-me-ei",
   "iLoveThisApp": "Sinto muito, adoro este app",
   "includeSystemApps": "Incluir Aplicativos do Sistema",
-  "info": "Info",
+  "info": "Informações",
   "installer": "Instalador",
   "jniAnalysis": "Análise JNI",
   "jniAnalysisDesc": "Encontre assinaturas do JNI no APK",
@@ -275,5 +275,5 @@
   "viewData": "Visualizar dados",
   "vrd": "Validar nome do diretório de recursos",
   "welcomeBack": "Bem-vindo(a) de volta!",
-  "yes": "Yes"
+  "yes": "sim"
 }
